--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.6.6",
+    "mongoose": "^5.6.7",
     "morgan": "~1.9.0",
+    "nodemailer": "^6.3.0",
     "request": "^2.88.0"
   },
   "devDependencies": {}
